# ArmesCPU

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: rust.yml
armes-elf/: Cargo.toml
armes-elf/examples/: read.rs  write.rs
armes-elf/src/: asm.rs  lib.rs  literal.rs  read.rs  write.rs
asm-examples/: Makefile  fibonacci.s  simple_print.elf  simple_print.s  simple_print_symbols.elf  simple_print_symbols.s
asm-examples/multifile_test/: asm_linked.elf  lib.elf  lib.s  linked.elf  main.elf  main.s
asm-ir/: Cargo.toml
asm-ir/src/: lib.rs
assembler/: Cargo.toml
assembler/src/: cache.rs  config.rs  error.rs  from_str_radix.rs  lib.rs  main.rs  parser.rs
assembler/src/parser/: arg.rs  db_directive.rs
emulator/: Cargo.toml
emulator/src/: config.rs  lib.rs  main.rs  memio.rs
emulator/src/memio/: hdd.rs  serial.rs
linker/: Cargo.toml
linker/src/: error.rs  lib.rs  main.rs
newdisk/: Cargo.toml
newdisk/src/: main.rs
readelf/: Cargo.toml
readelf/src/: main.rs
