[package]
name = "assembler"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
nom_locate = "4"
nom-supreme = "0.6"
ariadne = "0.1"