[package]
name = "assembler"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An assembler for the ArmesCPU instruction set"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
nom_locate = "4"
ariadne = "0.1"
asm-ir = {path="../asm-ir"}
armes-elf = {path="../armes-elf", default-features = false, features = ["write"]}
linker = {path = "../linker", default-features = false}
clap = { version = "3", features = ["derive"], optional=true }


[features]
cli = ["clap"]
default = ["cli"]