[package]
name = "assembler"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An assembler for the ArmesCPU instruction set"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
ariadne = "0.1.3"
asm-ir = {path="../asm-ir"}
thiserror = "1.0.30"
armes-elf = {path="../armes-elf", default-features = false, features = ["write"]}
linker = {path = "../linker", default-features = false}
clap = { version = "3.0.13", features = ["derive"], optional=true }
gimli = {version = "0.26.1", optional = true, default-features=false, features = ["std", "write"]}


[features]
cli = ["clap"]
dwarf = ["gimli"]
default = ["cli", "dwarf"]