[package]
name = "emulator"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An emulator for the ArmesCPU arquitecture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asm-ir = {path = "../asm-ir"}
clap = { version = "3", features = ["derive"]}