[package]
name = "readelf"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armes-elf = {path = "../armes-elf", default-features=false, features=["read"]}
clap = { version = "3", features = ["derive"] }

